# mcp-claude

./: .gitignore  PRD.md  README.md  claude_desktop_config.example.json
.claude/skills/mcp-testing/: SKILL.md
.claude/skills/openapi-to-mcp/: SKILL.md
.claude/skills/python-mcp-server/: SKILL.md
.claude/skills/readonly-sql-mcp/: SKILL.md
.claude/skills/springboot-api-scaffold/: SKILL.md
docs/: DEMO.md  TEST_RESULTS.md
mcp-analytics/: .env.example  README.md  pyproject.toml
mcp-analytics/src/mcp_analytics/: __init__.py  audit.py  config.py  db.py  export.py  guardrails.py  logging.py  pagination.py  pipeline.py  server.py  tools.py  validator.py
mcp-analytics/tests/: conftest.py
mcp-analytics/tests/integration/: test_guardrails_live.py
mcp-analytics/tests/unit/: test_audit.py  test_config.py  test_export.py  test_guardrails.py  test_pagination.py  test_validator.py
mcp-api-explorer/: .env.example  README.md  pyproject.toml
mcp-api-explorer/src/mcp_api_explorer/: __init__.py  caller.py  config.py  examples.py  intent.py  logging.py  server.py  spec.py
mcp-api-explorer/tests/: conftest.py
mcp-api-explorer/tests/fixtures/: openapi.json
mcp-api-explorer/tests/unit/: test_caller.py  test_examples.py  test_intent.py  test_spec.py
springboot-api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pom.xml
springboot-api/src/main/java/com/example/api/: ApiApplication.java
springboot-api/src/main/java/com/example/api/employee/: Employee.java  EmployeeController.java  EmployeeRepository.java  EmployeeService.java
springboot-api/src/main/java/com/example/api/order/: OrderController.java  OrderEntity.java  OrderRepository.java  OrderService.java  OrderStatus.java
springboot-api/src/main/resources/: application.yml
springboot-api/src/main/resources/db/migration/: V1__schema.sql  V2__readonly_role.sql  V3__seed.sql
