[project]
name = "mcp-analytics"
version = "0.1.0"
description = "Read-only natural-language analytics MCP over the sample Postgres database."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "premkumarkori" }]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "sqlglot>=25.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
integration = [
    "testcontainers[postgresql]>=4.0",
]

[project.scripts]
mcp-analytics = "mcp_analytics.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: tests that need Docker / a real Postgres",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
