[project]
name = "mcp-api-explorer"
version = "0.1.0"
description = "MCP server that exposes the Spring Boot API's OpenAPI spec as tools and resources."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "premkumarkori" }]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "jsonref>=1.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
mcp-api-explorer = "mcp_api_explorer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_api_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
